# zero_to_production_study

./: .dockerignore  .gitignore  .ignore  Cargo.toml  Dockerfile  Makefile  README.md  _typos.toml  aqua.yaml  configuration.yml  lefthook.yml  z2p.ipynb
.devcontainer/: Dockerfile  Dockerfile.devcontainer  devcontainer.json  docker-compose.yml
.github/workflows/: pull_request.yml
configuration/: base.yml  ci.yml  local.yml  production.yml
doc/: 20220317_DBMS_ADR.md  20220317_DB_CRATE_ADR.md
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  mod.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tools/: .pgpass  drop_databases.bash  path.fish
