[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we ar following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cago will default to `package.name`, with is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an arrai in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.0"
chrono = "0.4.15"
config = "0.11"
env_logger = "0.9"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
uuid = { version = "0.8.1", features = ["v4"] }

[dependencies.sqlx]
default-features = false
features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]
version = "0.5.7"

[dev-dependencies]
reqwest = "0.11"
