[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we ar following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cago will default to `package.name`, with is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an arrai in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.0"
actix-web-flash-messages = { version = "0.3", features = ["cookies"] }
actix-web-lab = "0.15"
anyhow = "1"
argon2 = { version = "0.3", features = ["std"] }
base64 = "0.13"
chrono = "0.4.15"
config = "0.11"
hex = "0.4"
hmac = { version = "0.12", features = ["std"] }
htmlescape = "0.3"
rand = { version = "0.8", features = ["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "3"
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
urlencoding = "2"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
validator = "0.14"

[dependencies.sqlx]
default-features = false
features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]
version = "0.5.7"

[dependencies.reqwest]
default-features = false
features = ["json", "rustls-tls", "cookies"]
version = "0.11"

[dependencies.actix-session]
branch = "master"
features = ["redis-rs-tls-session"]
git = "https://github.com/actix/actix-extras"

[dev-dependencies]
claim = "0.5"
fake = "~2.3"
linkify = "0.8"
once_cell = "1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"

[profile.release]
strip = true
